--- a/DexterAdmin_Frontend/dexter-admin/package.json
+++ b/DexterAdmin_Frontend/dexter-admin/package.json
@@ -17,14 +17,18 @@
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
-    "@angular/flex-layout": "^2.0.0-beta.10-4905443",
+    "@angular/flex-layout": "2.0.0-beta.10-4905443",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
     "@angular/material": "^5.0.0-rc0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular4-social-login": "^1.0.13",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
+    "googleapis": "^22.2.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
