--- a/OrderLimitApi/OrderLimitApi/OrderLimitApi.csproj
+++ b/OrderLimitApi/OrderLimitApi/OrderLimitApi.csproj
@@ -33,6 +33,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>..\..\..\Dexter.CodeStandards\Dexter.CodeStandards\Dexter.CodeStandards.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
