--- a/DexterAdmin_Frontend/dexter-admin/package.json
+++ b/DexterAdmin_Frontend/dexter-admin/package.json
@@ -4,12 +4,13 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    // "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-prod": "ng build --prod --aot"
+    "build-prod": "ng build --prod --aot",
+    "start": "node server"
   },
   "private": true,
   "dependencies": {
