--- a/DexterAdmin_Frontend/dexter-admin/package.json
+++ b/DexterAdmin_Frontend/dexter-admin/package.json
@@ -26,9 +26,12 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "angular4-social-login": "^1.0.13",
+    "angularfire2": "^5.0.0-rc.4",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "firebase": "^4.7.0",
+    "firebaseui": "^2.5.1",
     "googleapis": "^22.2.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
